Solved issue of empty domain on second y-Axis; Solved issue of 'invisible' dropdown selection (for y) over scatterplot; Solved issue of subscript tags appearing in the tooltip (replaced them with underscore again);

--- a/app/styles/analytics.scss
+++ b/app/styles/analytics.scss
@@ -119,4 +119,8 @@ rect.zoom.y.box, rect.zoom.y2.box{
   margin-top: 2px;
 }
 
+.SumoUnder{
+  height: 100% !important;
+}
+
 
